--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -1057,6 +1057,252 @@
     "missing_values_count = final_df.isnull().sum().sum()\n",
     "print(f\"Nombre total de valeurs manquantes dans final_df : {missing_values_count}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PARTIE II - PARTIE DESCRIPTIVE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette partie a pour objectif de décrire et interpréter les fluctuations de l'or et des principales cryptomonnaies et actions sur les marchés financiers. \n",
+    "Cette première analyse met en évidence ce que l'on cherchera à expliquer dans la partie suivante. \n",
+    "1. Travail préliminaire d'aide à la visualisation\n",
+    "*1.1. Affichage des données*\n",
+    "Afin de faciliter la visualisation, on conserve trois décimales pour le prix des actions pour lesquelles ce n'est pas déjà le cas. On conserve six décimales pour le prix des cryptomonnaies. En effet, les cryptomonnaies sont divisibles en très petites unités ; réduire le nombre de décimales serait donc synonyme de perte d'information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Arrondir le prix des actions à 3 décimales lorsque nécessaire \n",
+    "final_df = final_df.round({'amazon_stock_price': 3, 'google_stock_price': 3, 'meta_stock_price': 3})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On effectue également des modifications sur le volume en évitant l'écriture scientifique pour plus de lisibilité. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fonction pour convertir les colonnes spécifiées en entiers\n",
+    "def convert_to_int(df, columns):\n",
+    "    df[columns] = df[columns].astype(int)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On utilise alors la fonction avec la liste des colonnes à convertir suivante:\n",
+    "columns_converted = ['google_stock_volume', 'ethereum_volume', 'bitcoin_volume', 's&p500_volume', 'meta_stock_volume']\n",
+    "\n",
+    "# Application de la fonction à final_df\n",
+    "final_df = convert_to_int(final_df, columns_converted)\n",
+    "\n",
+    "# Afficher les premières lignes du df modifié \n",
+    "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*1.2. Premières statistiques descriptives*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On affiche dans un premier temps les statistiques descriptives pour l'ensemble des variables sur toute la période considérée. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modélisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculer le maximum des 6 derniers mois\n",
+    "final_df['6_months_max'] = final_df['s&p500_price'].rolling(window=6, min_periods=6).max()\n",
+    "\n",
+    "# Calculer la variation en pourcentage par rapport au maximum des 6 derniers mois\n",
+    "final_df['percent_change'] = (final_df['s&p500_price'] - final_df['6_months_max']) / final_df['6_months_max'] * 100\n",
+    "\n",
+    "# Détecter les crises avec un seuil de -10 %\n",
+    "final_df['crisis'] = final_df['percent_change'].apply(lambda x: 1 if x <= -10 else (0 if pd.notna(x) else pd.NA))\n",
+    "\n",
+    "# Afficher uniquement les lignes où une crise est détectée\n",
+    "crisis_df = final_df[final_df['crisis'] == 1]\n",
+    "print(crisis_df[['year_month', 's&p500_price', '6_months_max', 'percent_change', 'crisis']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filtrer les lignes où year_month contient 2020 et crisis = 1\n",
+    "filtered_2020_crisis = final_df[(final_df['year_month'].str.startswith('2020')) & (final_df['crisis'] == 1)]\n",
+    "\n",
+    "# Afficher les résultats\n",
+    "print(filtered_2020_crisis[['year_month', 's&p500_price', '12_months_max', 'percent_change', 'crisis']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install arch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from arch import arch_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calcul des rendements logarithmiques pour l'or\n",
+    "final_df['gold_return'] = np.log(final_df['gold_historical_data_2000_2024_price'] / final_df['gold_historical_data_2000_2024_price'].shift(1))\n",
+    "\n",
+    "# Calcul des rendements logarithmiques pour Amazon\n",
+    "final_df['stock_return'] = np.log(final_df['amazon_stock_price'] / final_df['amazon_stock_price'].shift(1))\n",
+    "\n",
+    "# Supprimer les lignes avec des valeurs manquantes (les premières lignes créées par shift)\n",
+    "final_df = final_df.dropna()\n",
+    "\n",
+    "# Afficher les premières lignes pour vérifier\n",
+    "print(final_df[['gold_return', 'stock_return']].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from arch import arch_model\n",
+    "from scipy.optimize import minimize\n",
+    "from statsmodels.api import OLS, add_constant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Préparer les données\n",
+    "final_df = final_df[(final_df['gold_historical_data_2000_2024_price'] > 0) & (final_df['amazon_stock_price'] > 0)]\n",
+    "final_df = final_df.dropna()\n",
+    "\n",
+    "# Calculer les rendements logarithmiques\n",
+    "final_df['gold_return'] = np.log(final_df['gold_historical_data_2000_2024_price'] / final_df['gold_historical_data_2000_2024_price'].shift(1)) * 100\n",
+    "final_df['amazon_stock_return'] = np.log(final_df['amazon_stock_price'] / final_df['amazon_stock_price'].shift(1)) * 100\n",
+    "final_df = final_df.dropna()\n",
+    "\n",
+    "# 2. Ajuster les modèles GARCH univariés\n",
+    "gold_model = arch_model(final_df['gold_return'], mean='Zero', vol='Garch', p=1, q=1)\n",
+    "gold_fit = gold_model.fit(disp=\"off\")\n",
+    "\n",
+    "amazon_model = arch_model(final_df['amazon_stock_return'], mean='Zero', vol='Garch', p=1, q=1)\n",
+    "amazon_fit = amazon_model.fit(disp=\"off\")\n",
+    "# Extraire les résidus standardisés\n",
+    "gold_std_resid = gold_fit.std_resid\n",
+    "amazon_std_resid = amazon_fit.std_resid\n",
+    "\n",
+    "# Variables muettes basées sur les résidus standardisés\n",
+    "final_df['dum_gold_neg'] = (gold_std_resid < 0).astype(int)\n",
+    "final_df['dum_stock_neg'] = (amazon_std_resid < 0).astype(int)\n",
+    "final_df['interaction'] = final_df['dum_gold_neg'] * final_df['dum_stock_neg']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Calcul de la covariance conditionnelle\n",
+    "final_df['covariance_conditionnelle'] = gold_std_resid * amazon_std_resid\n",
+    "\n",
+    "# 4. Ajouter la variable de crise\n",
+    "final_df['dum_crise'] = (final_df['crisis'] == 1).astype(int)  # Variable de crise (assurez-vous que 'crisis' existe)\n",
+    "\n",
+    "# 5. Régression pour estimer c_GS et delta_GS\n",
+    "X = final_df[['gold_return', 'amazon_stock_return', 'interaction', 'dum_crise']]\n",
+    "X = add_constant(X)  # Ajouter une constante pour inclure c_GS\n",
+    "y = final_df['covariance_conditionnelle']\n",
+    "\n",
+    "model_hGS = OLS(y, X)\n",
+    "results_hGS = model_hGS.fit()\n",
+    "\n",
+    "# 6. Résultats de la régression\n",
+    "print(\"\\nRésultats de la régression pour h_GS :\")\n",
+    "print(results_hGS.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extraire les coefficients\n",
+    "c_GS = results_hGS.params['const']\n",
+    "delta_GS = results_hGS.params['dum_crise']\n",
+    "cGS_sum = c_GS + delta_GS\n",
+    "cGS_sum"
+   ]
   }
  ],
  "metadata": {
