--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -259,18 +259,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_13801/366641353.py:10: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
-      "  date_range = pd.date_range(start=\"2000-01\", end=\"2024-12\", freq=\"M\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Liste des fichiers CSV des entreprises\n",
     "companies= [\"amazon_data.csv\",\n",
@@ -279,14 +270,13 @@
     "    \"meta_data.csv\",\n",
     "    \"microsoft_data.csv\"\n",
     "]\n",
-    "\n",
     "# Créer un DataFrame principal avec toutes les dates possibles de 2000 à 2024\n",
-    "date_range = pd.date_range(start=\"2000-01\", end=\"2024-12\", freq=\"M\")\n",
-    "final_df = pd.DataFrame({'year_month': date_range.to_period('M')})\n",
+    "date_range = pd.date_range(start=\"2000-01\", end=\"2024-12\", freq=\"ME\")\n",
+    "final_df = pd.DataFrame({'year_month': date_range.to_period('M')})  \n",
     "\n",
     "for file in companies:\n",
     "    # Charger les données\n",
-    "    df = pd.read_csv(\"all_data_used/\"+ file)\n",
+    "    df = pd.read_csv(\"all_data_used/\" + file)\n",
     "\n",
     "    # Récupérer le nom de l'entreprise\n",
     "    company_name = file.replace(\"_data.csv\", \"\").replace(\".csv\", \"\").replace(\" \", \"\")\n",
@@ -310,8 +300,8 @@
     "        if col in final_df.columns:\n",
     "            final_df.drop(columns=col, inplace=True)\n",
     "\n",
-    "    # Fusionner directement avec le DataFrame principal\n",
-    "    final_df = pd.merge(final_df, df, on='year_month', how='left')"
+    "    # Fusionner  avec le DataFrame principal\n",
+    "    final_df = pd.merge(final_df, df, on='year_month', how='left')\n"
    ]
   },
   {
@@ -3128,29 +3118,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.12/site-packages/arch/univariate/base.py:768: ConvergenceWarning: The optimizer returned code 8. The message is:\n",
-      "Positive directional derivative for linesearch\n",
-      "See scipy.optimize.fmin_slsqp for code meaning.\n",
-      "\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'company': 'amazon', 'sum': np.float64(0.23100366205404893)}\n",
-      "{'company': 'meta', 'sum': np.float64(0.08427014725496486)}\n",
-      "{'company': 'apple', 'sum': np.float64(0.19747530929671608)}\n",
-      "{'company': 'google', 'sum': np.float64(0.1570415343280066)}\n",
-      "{'company': 'microsoft', 'sum': np.float64(0.20462900265614856)}\n"
+      "{'company': 'amazon', 'sum': np.float64(0.35873932889245297)}\n",
+      "{'company': 'meta', 'sum': np.float64(0.1255034009875402)}\n",
+      "{'company': 'apple', 'sum': np.float64(0.19723229646259394)}\n",
+      "{'company': 'google', 'sum': np.float64(0.36889280469837477)}\n",
+      "{'company': 'microsoft', 'sum': np.float64(0.3007796055175412)}\n"
      ]
     }
    ],
