--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Installation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -1989,7 +1996,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On remarque que les actions Amazon, Google et Meta, Microsoft ainsi que le Bitcoin et l'or ont connu leur maximum historique entre fin 2017 et 2024. Google a également atteint son prix minimal pendant la période la plus récente. Pour toutes les autres actions et pour l'or et les cryptomonnaies créées avant 2017, le prix minimum a été atteint avant décembre 2017. On observe donc une tendance de décalage vers le haut du prix minimal. Pour le Bitcoin, on remarque que le prix minimal sur la période récente (20394.128314$) est bien supérieur à celui sur la période antérieure à décembre 2017 (238.188499$), ce qui montre l'attrait croissant pour la détention pour le Bitcoin au fil des années. "
+    "On remarque que les actions Amazon, Google et Meta, Microsoft ainsi que le Bitcoin et l'or ont connu leur maximum historique entre fin 2017 et 2024. Google a également atteint son prix minimal pendant la période la plus récente. Pour toutes les autres actions et pour l'or et les cryptomonnaies créées avant 2017, le prix minimum a été atteint avant décembre 2017. On observe donc une tendance de décalage vers le haut du prix minimal. Pour le Bitcoin, on remarque que le prix minimal sur la période récente (20394.128314\\$) est bien supérieur à celui sur la période antérieure à décembre 2017 (238.188499\\$), ce qui montre l'attrait croissant pour la détention pour le Bitcoin au fil des années. "
    ]
   },
   {
