--- a/main.ipynb
+++ b/main.ipynb
@@ -30,7 +30,7 @@
       "Requirement already satisfied: frozendict>=2.3.4 in /opt/conda/lib/python3.12/site-packages (from yfinance) (2.4.6)\n",
       "Collecting peewee>=3.16.2 (from yfinance)\n",
       "  Downloading peewee-3.17.8.tar.gz (948 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m948.2/948.2 kB\u001b[0m \u001b[31m14.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m948.2/948.2 kB\u001b[0m \u001b[31m33.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
       "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
       "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
@@ -50,12 +50,12 @@
       "Downloading yfinance-0.2.51-py2.py3-none-any.whl (104 kB)\n",
       "Downloading html5lib-1.1-py2.py3-none-any.whl (112 kB)\n",
       "Downloading lxml-5.3.0-cp312-cp312-manylinux_2_28_x86_64.whl (4.9 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.9/4.9 MB\u001b[0m \u001b[31m59.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.9/4.9 MB\u001b[0m \u001b[31m56.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading multitasking-0.0.11-py3-none-any.whl (8.5 kB)\n",
       "Downloading webencodings-0.5.1-py2.py3-none-any.whl (11 kB)\n",
       "Building wheels for collected packages: peewee\n",
       "  Building wheel for peewee (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for peewee: filename=peewee-3.17.8-cp312-cp312-linux_x86_64.whl size=301618 sha256=7e9e8ab031268230ee68fb213b389aec5ba68d7dd597018fab6e21787d2714fe\n",
+      "\u001b[?25h  Created wheel for peewee: filename=peewee-3.17.8-cp312-cp312-linux_x86_64.whl size=301618 sha256=0c401083bd1dc1e899e53296d40c5b312c4cd74c794b8aa9e2439f969b3fcd5e\n",
       "  Stored in directory: /home/onyxia/.cache/pip/wheels/8f/65/34/456800445efeafb05164fe95285c70e81ba1d96bae30f43917\n",
       "Successfully built peewee\n",
       "Installing collected packages: webencodings, peewee, multitasking, lxml, html5lib, yfinance\n",
@@ -73,7 +73,7 @@
       "Requirement already satisfied: packaging>=21.3 in /opt/conda/lib/python3.12/site-packages (from statsmodels>=0.12->arch) (24.2)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas>=1.4->arch) (1.17.0)\n",
       "Downloading arch-7.2.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (978 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m978.3/978.3 kB\u001b[0m \u001b[31m75.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m978.3/978.3 kB\u001b[0m \u001b[31m50.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: arch\n",
       "Successfully installed arch-7.2.0\n"
      ]
@@ -209,55 +209,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Téléchargement des données pour Gold (GC=F)...\n"
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
+      "\n",
+      "[*********************100%***********************]  1 of 1 completed"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Téléchargement des données pour Bitcoin (BTC-USD)...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Téléchargement des données pour Ethereum (ETH-USD)...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Téléchargement des données pour Gold (GC=F)...\n",
+      "Téléchargement des données pour Bitcoin (BTC-USD)...\n",
+      "Téléchargement des données pour Ethereum (ETH-USD)...\n",
       "Téléchargement des données pour S&P 500 (^GSPC)...\n"
      ]
     },
@@ -265,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
+      "\n"
      ]
     }
    ],
@@ -323,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +490,7 @@
        "4               672215400  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +751,7 @@
        "4              NaN         NaN          NaN   1421.299988    19898300000  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1088,7 @@
        "4     3.549254e+11  270.916667  12806.666667   1421.299988    19898300000  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1388,7 @@
        "4     354925375295  270.916667  12806.666667   1421.299988    19898300000  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1699,7 @@
        "max     1.621854e+11  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +1998,7 @@
        "max       1.510330e+12  2695.750000  443701.00000   5870.339844   1.621854e+11  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2056,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2081,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2096,10 +2074,13 @@
     }
    ],
    "source": [
+    "temp_data = latest_data.copy()\n",
+    "temp_data['year_month'] = temp_data['year_month'].dt.to_timestamp()\n",
+    "\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(latest_data['year_month'], latest_data['bitcoin_price'], label='Prix du Bitcoin', marker='o')  # Courbe pour le Bitcoin\n",
-    "plt.plot(latest_data['year_month'], latest_data['ethereum_price'], label=\"Prix de l'Ethereum\", marker='s')  # Courbe pour l'Ethereum\n",
-    "plt.plot(latest_data['year_month'], latest_data['gold_price'], label=\"Prix de l'or\", marker='^')  # Courbe pour l'or\n",
+    "plt.plot(temp_data['year_month'], temp_data['bitcoin_price'], label='Prix du Bitcoin', marker='o')\n",
+    "plt.plot(temp_data['year_month'], temp_data['ethereum_price'], label=\"Prix de l'Ethereum\", marker='s')\n",
+    "plt.plot(temp_data['year_month'], temp_data['gold_price'], label=\"Prix de l'or\", marker='^')\n",
     "plt.title(\"Evolution du prix de l'or et des cryptomonnaies entre fin 2017 et fin 2024\")\n",
     "plt.xlabel('Année')  \n",
     "plt.ylabel('Prix')\n",
@@ -2110,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2119,7 +2100,7 @@
        "Period('2024-10', 'M')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2145,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2161,19 +2142,19 @@
    ],
    "source": [
     "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(latest_data['year_month'], latest_data['ethereum_price'], label=\"Prix de l'Ethereum\", marker='s')  # Courbe pour l'Ethereum\n",
-    "plt.plot(latest_data['year_month'], latest_data['gold_price'], label=\"Prix de l'or\", marker='^')  # Courbe pour l'or\n",
+    "plt.plot(temp_data['year_month'], temp_data['ethereum_price'], label=\"Prix de l'Ethereum\", marker='s')\n",
+    "plt.plot(temp_data['year_month'], temp_data['gold_price'], label=\"Prix de l'or\", marker='^')\n",
     "plt.title(\"Evolution du prix de l'or et de l'Ethereum entre fin 2017 et fin 2024\")\n",
     "plt.xlabel('Année')  \n",
     "plt.ylabel('Prix')\n",
-    "plt.legend() \n",
+    "plt.legend()\n",
     "plt.grid(True)  \n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2182,7 +2163,7 @@
        "Period('2021-11', 'M')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2217,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2237,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2270,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2314,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2341,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2368,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2458,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2488,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2543,7 +2524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
